# gha-enforce-sha

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  pyproject.toml
.github/workflows/: checks.yaml
gha_enforce_sha/: __main__.py  errors.py  git.py  main.py
scripts/: check_deps.sh
tests/: main_test.py
